--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\jorda\Desktop\Web Development\HTML - Personal Site\images\profilepicture.jpg" alt="Profile Picture" alt="Profile Picture"></td>
+      <td><img src="images/profilepicture.jpg" alt="Profile Picture"></td>
       <td>
         <h1>Jordan Andrew</h1>
         <p><em>Learner of <strong><a href="https://www.appbrewery.co/">The App Brewery</a> The Complete 2020 Web Development Bootcamp</strong> by Angela Yu</em></p>
